[package]
name = "redis-watcher"
version = "0.1.0"
edition = "2021"
description = "Redis watcher for Casbin-RS"
license = "Apache-2.0"
authors = ["Casbin Contributors"]
homepage = "https://github.com/casbin-rs/redis-watcher"
repository = "https://github.com/casbin-rs/redis-watcher"
documentation = "https://docs.rs/redis-watcher"
readme = "README.md"
keywords = ["casbin", "redis", "watcher", "authorization", "access-control"]
categories = ["authentication", "authorization", "database"]
include = ["src/**/*", "examples/**/*", "README.md", "LICENSE", "Cargo.toml"]
exclude = [
    "target/**/*",
    ".github/**/*",
    ".git/**/*",
    ".gitignore",
    "Cargo.lock",
]

[dependencies]
casbin = "2.2"
redis = { version = "0.32.6", features = [
    "tokio-comp",
    "cluster-async",
    "aio",
] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"
