[package]
name = "redis-watcher-temp"
version = "0.1.0"
edition = "2021"
description = "Redis watcher for Casbin-RS (Test Package)"
license = "Apache-2.0"
authors = ["Casbin Contributors"]
homepage = "https://github.com/cici0602/redis-watcher-v1"
repository = "https://github.com/cici0602/redis-watcher-v1"
documentation = "https://docs.rs/redis-watcher-temp"
readme = "README.md"
keywords = ["casbin", "redis", "watcher", "authorization", "access-control"]
include = ["src/**/*", "examples/**/*", "README.md", "LICENSE", "Cargo.toml"]

[dependencies]
casbin = { version = "2.13.0", features = ["watcher"] }
redis = { version = "0.32.6", features = [
    "tokio-comp",
    "cluster-async",
    "aio",
] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"
